--- a/PD augsa.HTML
+++ b/PD augsa.HTML
@@ -6,15 +6,16 @@
 <body>
 
 <div style="display:flex; justify-content:center; align-items:center; gap:20px;">
-<img src="bildes/lulu.jpg" width="300" height="250"/>
-<img src="bildes/madcat.jpg" width="300" height="250"/>
+<img src="Bildes/lulu.jpg" width="300" height="250"/>
+<img src="Bildes/madcat.jpg" width="300" height="250"/>
 <div style="font-size:90px; color:#5D1D6E; font-family:Verdana; font-weight:bold;">
 LULU
 </div>
-<img src="bildes/kakisgul.jpg" width="300" height="250"/>
-<img src="bildes/mutevalacat.jpg" width="300" height="250"/>
+<img src="Bildes/kakisgul.jpg" width="300" height="250"/>
+<img src="Bildes/mutevalacat.jpg" width="300" height="250"/>
 </div>
 
 </body>
+
 
 </html>
