--- a/PD labapuse.HTML
+++ b/PD labapuse.HTML
@@ -6,30 +6,31 @@
 <body>
 
 <br>
-<img src="bildes/kakisbig.jpg" width="300" height="300"/>
+<img src="Bildes/kakisbig.jpg" width="300" height="300"/>
 </br>
 
 <br>
-<img src="bildes/catsleep.jpg" width="300" height="300"/>
+<img src="Bildes/catsleep.jpg" width="300" height="300"/>
 </br>
 
 <br>
-<img src="bildes/catcool.jpg" width="300" height="300"/>
+<img src="Bildes/catcool.jpg" width="300" height="300"/>
 </br>
 
 <br>
-<img src="bildes/catup.jpg" width="300" height="300"/>
+<img src="Bildes/catup.jpg" width="300" height="300"/>
 </br>
 
 <br>
-<img src="bildes/sleepycatt.jpg" width="300" height="300"/>
+<img src="Bildes/sleepycatt.jpg" width="300" height="300"/>
 </br>
 
 <br>
-<img src="bildes/kakisbig.jpg" width="300" height="300"/>
+<img src="Bildes/kakisbig.jpg" width="300" height="300"/>
 </br>
 
 
 </body>
+
 
 </html>
